--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,14 +56,14 @@ jobs:
           wget -O index.html http://orteil.dashnet.org/cookieclicker/
           wget -O style.css http://orteil.dashnet.org/cookieclicker/style.css
           wget -N -i _jslist.txt -B http://orteil.dashnet.org/cookieclicker/
-          
-      - name: Upload a Build Artifact
+    
+    - name: Upload a Build Artifact
   uses: actions/upload-artifact@v3.1.0
   with:
     # Artifact name
     name: # optional, default is artifact
     # A file, directory or wildcard pattern that describes what to upload
-    path: 
+    path: /home/runner/work/cookieclicker/cookieclicker
     # The desired behavior if no files are found using the provided path.
 Available Options:
   warn: Output a warning but do not fail the action
@@ -71,8 +71,7 @@ Available Options:
   ignore: Do not output any warnings or errors, the action does not fail
 
     if-no-files-found: warn
-    # optional, default is warn
     # Duration after which artifact will expire in days. 0 means using default retention.
-Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
+    # Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
 
-    retention-days: # optional
+    retention-days: 0
