--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,19 +55,22 @@ jobs:
           wget -O index.html http://orteil.dashnet.org/cookieclicker/
           wget -O style.css http://orteil.dashnet.org/cookieclicker/style.css
           wget -N -i _jslist.txt -B http://orteil.dashnet.org/cookieclicker/
-    
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.0
         with:
-          name: artifact # optional, default is artifact
+    # Artifact name
+    name: artifact
     # A file, directory or wildcard pattern that describes what to upload
-          path: /home/runner/work/cookieclicker/cookieclicker
+    path:  /home/runner/work/cookieclicker/cookieclicker  
     # The desired behavior if no files are found using the provided path.
-        if-no-files-found: warn
 Available Options:
   warn: Output a warning but do not fail the action
   error: Fail the action with an error message
   ignore: Do not output any warnings or errors, the action does not fail
+
+  if-no-files-found: warn
+    # optional, default is warn
     # Duration after which artifact will expire in days. 0 means using default retention.
-    # Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
-  retention-days: 0
+Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
+
+    retention-days: # optional
