--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,4 @@ Available Options:
   error: Fail the action with an error message
   ignore: Do not output any warnings or errors, the action does not fail
 if-no-files-found: warn
-    # Duration after which artifact will expire in days. 0 means using default retention.
-# Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
-
-    retention-days: # optional
+    retention-days: 0
