--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,17 +53,9 @@ jobs:
           wget -O index.html http://orteil.dashnet.org/cookieclicker/
           wget -O style.css http://orteil.dashnet.org/cookieclicker/style.css
           wget -N -i _jslist.txt -B http://orteil.dashnet.org/cookieclicker/
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v3.1.0
+      
+      - name: Upload artifact
+      - uses: actions/upload-artifact@v3
         with:
-    # Artifact name
-    name: artifact
-    # A file, directory or wildcard pattern that describes what to upload
-    path:  /home/runner/work/cookieclicker/cookieclicker  
-    # The desired behavior if no files are found using the provided path.
-Available Options:
-  warn: Output a warning but do not fail the action
-  error: Fail the action with an error message
-  ignore: Do not output any warnings or errors, the action does not fail
-if-no-files-found: warn
-    retention-days: 0
+           name: cookie-clicker
+           path: /home/runner/work/cookieclicker/cookieclicker  
