--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,26 +7,15 @@ on:
     branches: [ "gh-pages" ]
   pull_request:
     branches: [ "gh-pages" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
       - name: Update image files
         run: |
           cd img/
@@ -53,6 +42,7 @@ jobs:
           wget -O index.html http://orteil.dashnet.org/cookieclicker/
           wget -O style.css http://orteil.dashnet.org/cookieclicker/style.css
           wget -N -i _jslist.txt -B http://orteil.dashnet.org/cookieclicker/
+          wget -O grab.txt http://orteil.dashnet.org/patreon/grab.php
       
       - name: Upload artifact
         uses: actions/upload-artifact@v3.1.0
